updated width on mobile to prevent horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -214,14 +214,14 @@ footer p {
 
   header h1 {
     font-weight: 200px;
-    font-size: 38px;
+    font-size: 28px;
     line-height: 1.5;
     margin: 0;
     letter-spacing: 1px;
   }
   header h2 {
     font-weight: 300;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.5;
     margin: 0;
   }
@@ -235,10 +235,13 @@ footer p {
   }
   .grid-main {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 200px;
     text-align: center;
-    grid-gap: 0;
-    text-align: center;
+    max-width: 200px;
+    margin: 0 auto;
+  }
+  .grid-main p {
+    font-size: 14px;
   }
 
   .lift {
@@ -255,8 +258,9 @@ footer p {
   }
   main p {
     font-weight: 100;
-    font-size: 14px;
     text-align: center;
+
+    justify-content: center;
   }
   header a {
     font-weight: 300;
@@ -292,7 +296,7 @@ footer p {
 
   footer li {
     font-weight: 100;
-    font-size: 10px;
+    font-size: 12px;
     color: white;
     list-style: none;
     text-align: center;
@@ -304,7 +308,7 @@ footer p {
 
   footer a {
     font-weight: 100;
-    font-size: 10px;
+    font-size: 12px;
     color: white;
     opacity: 0.7;
     text-align: center;
@@ -312,9 +316,9 @@ footer p {
 
   footer p {
     font-weight: 100;
-    font-size: 10px;
+    font-size: 12px;
     color: white;
-    opacity: 0.7;
+    opacity: 0.9;
     text-align: center;
   }
   .footer-grid {
@@ -323,10 +327,6 @@ footer p {
     justify-content: center;
     text-align: center;
     margin: 0 auto;
-  }
-  .footer-grid p {
-    max-width: 300px;
-    text-align: center;
-    margin: 0 auto;
+    max-width: 240px;
   }
 }
